fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ h4 {
 }
 
 .playlist {
-  padding-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .recommendation {
